# StoneworkIngress

./: .gitignore  pyproject.toml
stonework_ingress/: __init__.py  cli.py  model.py
stonework_ingress/parsers/: cyclonedx.py
stonework_ingress/writers/: sparql.py
tests/: test_cyclonedx.py
tests/fixtures/: sample-app-sbom.json
